2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Only MS VC++ doesn't have snprintf.
        But MinGW has it.
	* src/ucommand.cc: Fix accordingly.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	snprintf doesn't seem to exist on Win32.
	* src/ucommand.cc: But there is a _snprintf... so use it instead.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fixes for Windows.
	* src/network/bsdnet/connection.cc: Use libport's windows.h.
	* src/console.cc: Ditto.
	* src/network/bsdnet/connection.hh: Aesthetic change.
	* src/network/bsdnet/network.hh: Use libport's network.h.
	* src/network/bsdnet/network.cc: Fix includes.
	* src/uconnection.cc: Fix initialization order.

2006-12-07  Razik Yousfi  <yousfi@gostai.com>

	Use ucopy in copy methods.
	* src/uexpression.hh: Add new constructor.
	* src/uexpression.cc,
	* src/uvalue.cc,
	* src/uvariablelist.cc: Use ucopy.
	* vcs/local.rb: Add yousfi@gostai.com.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Some cleanup
	This code is truly depressing, as soon as one wants to improve
	something, the impedance is so high that everything either falls
	apart, or require immediate care.  Believe it or not, I was
	working on error messages from the parser!
	* src/ucommand.cc, src/ucommand.hh, src/uconnection.cc,
	* src/uexpression.cc, src/ughostconnection.hh: Several
	changes I no longer feel like documenting, which is bad.
	Just as the code.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	uvar-common.cc
	* src/uvar.cc: Remove the code now in uvar-common.cc.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	Clean the scanner
	Now the scanner is tracking location accurately when
	there are C comments.
	* src/parser/bison/utoken.l (SET_VALP_STR, RETURN_STR_TOKEN)
	(RETURN_VAL_TOKEN, RETURN_NUM, RETURN_FLAG, RETURN_FLAGTIME)
	(RETURN_TIMEVALUE): New.
	Use them to factor and improve the code.
	(SC_C_COMMENT): New, use it to handle C comments.
	(EOL, BLANKS): New abbrev, use them.