@@ -1,3 +1,9 @@
+2006-12-08  Razik Yousfi  <yousfi@gostai.com>
+
+	Remove dead code.
+	* src/uasynccommand.hh: Remove dead code.
+	* src/uasyncregister.hh: Idem.
+
 2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	Only MS VC++ doesn't have snprintf.
